--- a/frontend/src/changes.txt
+++ b/frontend/src/changes.txt
@@ -2,3 +2,7 @@ Esquire Frameworks(tm) 2.0
 Esquire Exporer sandbox (frontend)
 
 12/17/2025 initial  
+
+12/24/2025 Esquire API and types generalization
+ pokemon-tree\pokemon-tree.component.ts
+  - kind parameter is requried for esq-cmd, esq-enode
